<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">Technobit</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Technobit</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!-- string per le impostazioni -->
    <string name="tools_notify">Notifiche</string>
    <string name="tools_vibration">Vibrazione</string>
    <string name="tools_account_calendar">Account e calendario</string>
    <string name="tools_select_account">Seleziona un account</string>
    <string name="tools_select_color">Colore</string>Colore>/string>
    <string name="tools_select_color_summary">Seleziona un colore per gli eventi</string>
    <string name="snackbar_login_error">Riprova più tardi</string>
    <string name="snackbar_internet_connection_error">Attiva la connessione dati</string>

    <!-- string for menu drawer -->
    <string name="menu_home">Contatti</string>
    <string name="menu_chronometer">Cronometro</string>
    <string name="menu_tools">Impostazioni</string>
    <string name="menu_send">Invia</string>

    <!-- string for contact icon menu-->
    <string name="contact_menu_add">Nuovo</string>
    <string name="contact_menu_delete">Rimuovi</string>
    <string name="snackbar_contact_no_delete_permitted">Prima ferma il cronometro</string>

    <!-- string fragment chronometro-->
    <string name="chrono_start">START</string>
    <string name="chrono_pause">PAUSA</string>
    <string name="chrono_stop">STOP </string>
    <string name="spinner_hint">Scegli un cliente</string>
    <string name="snackbar_start_error">Scegli un cliente per iniziare</string>
    <string name="snackbar_close_btn">CHIUDI</string>
    <string name="snackbar_send_positive">Invio riuscito correttamente!</string>

    <!-- String per le shared preference -->

    <!-- String per il color picker -->
    <string name="color_picker_default_title" msgid="1248663997452044787">"Seleziona un colore"</string>
    <string name="color_swatch_description" msgid="2883438431173736180" translatable="false">"Colore <xliff:g id="COLOR_INDEX">%1$d</xliff:g>"</string>
    <string name="color_swatch_description_selected" msgid="5020921249944943124" translatable="false">"Colore selezionato: <xliff:g id="COLOR_INDEX">%1$d</xliff:g>"</string>

    <!-- string fragment signature-->
    <string name="event_descr">"Descrizione dell'evento…"</string>
    <string name="btn_send">INVIA</string>
    <string name="btn_clear">CLEAR</string>
    <string name="snackbar_bitmap_error">Firma assente!</string>
    <string name="snackbar_no_internet">Attiva internet!</string>

    <!-- string per la custom dialog -->
    <string name="dialog_add_contact_title">Nuovo contatto</string>
    <string name="dialog_update_contact_title">Aggiorna i dati</string>
    <string name="dialog_add_contact_name">nome</string>
    <string name="dialog_add_contact_email">email</string>

    <!-- string for custom confirm dialog-->
    <string name="dialog_btn_no">ANNULLA</string>
    <string name="dialog_btn_yes" translatable="false">OK</string>
    <string name="dialog_confirm_signOut_message">Sei sicuro di voler scollegare il tuo account?</string>
    <string name="dialog_confirm_account_not_selected_yet">Non hai ancora selezionato un account, vuoi farlo ora?</string>

    <!-- string for contact fragment-->
    <string name="snackbar_file_error">Impossibile completare l\'azione</string>
    <string name="dialog_confirm_delete_message"> Sei sicuro di voler  rimuovere i contatti selezionati? </string>
    <string name="snackbar_duplicate_contact">Contatto già esistente!</string>

    <string-array name="default_color_choice_values" translatable="false">
        <item>#F6BF26</item>
        <item>#7986CB</item>
        <item>#039B81</item>
        <item>#8E24AA</item>
        <item>#E67C73</item>
        <item>#D50000</item>
        <item>#F4511E</item>
        <item>#4285F4</item>
        <item>#616161</item>
        <item>#3F51B5</item>
        <item>#0B8043</item>
    </string-array>

    <!--- string for send fragment -->
    <string name="send_text_info">Trovati %1$d eventi non inviati</string>
    <string name="send_text_error">Nessun evento trovato!</string>
    <string name="send_text_upload">Invio dei tuoi eventi …</string>
    <string name="send_text_fail">Riprova più tardi …</string>
    <string name="send_text_completed">Invio completato …</string>
    <string name="background_send_feedback">Invio dei dati in background …</string>
    <string name="send_text_progress" translatable="false">%1$d%%</string>
    <string name="emailSubject">Technobit: riparazione del</string>
</resources>
